# cryb-to

./: .cirrus.yml  .gitignore  .travis.yml  CREDITS  LICENSE  Makefile.am  README  README.md  autogen.des  autogen.sh  configure.ac  mkpkgng.in
debian/: .gitignore  changelog  control  copyright  rules
freebsd/: .gitignore  Makefile.in
include/: .gitignore  Makefile.am
include/cryb/: Makefile.am  aes.h  algorithm.h  assert.h  attributes.h  bitwise.h  chacha.h  cipher.h  core.h  coverage.h  cpe.h  ctype.h  defs.h  des.h  digest.h  enc.h  endian.h  hash.h  hmac.h  hmac_md5.h  hmac_sha1.h  hmac_sha224.h  hmac_sha256.h  hmac_sha384.h  hmac_sha512.h  hotp.h  impl.h  mac.h  md.h  md2.h  md4.h  md5.h  memcpy_s.h  memset_s.h  mpi.h  nocoverage.h  oath.h  oath_constants.h  oath_hotp.h  oath_totp.h  (+28 more)
lib/: Makefile.am
lib/cipher/: Makefile.am  aes.c  cryb-cipher.pc.in  cryb_aes.c  cryb_chacha.c  cryb_cipher.c  cryb_des.c  cryb_rc4.c  cryb_salsa.c
lib/core/: Makefile.am  _string.c  cryb-core.pc.in  cryb_assert.c  cryb_core.c  cryb_memcpy_s.3  cryb_memcpy_s.c  cryb_memset_s.3  cryb_memset_s.c  cryb_strchrnul.c  cryb_string.c  cryb_string_impl.c  cryb_strlcat.3  cryb_strlcat.c  cryb_strlcmp.c  cryb_strlcpy.3  cryb_strlcpy.c  cryb_wcschrnul.c  cryb_wcslcat.c  cryb_wcslcmp.c  cryb_wcslcpy.c  cryb_wstring.c  string.c  wstring.c
lib/cpe/: Makefile.am  cpe.c  cpe_string.c  cpe_uri.c  cpe_wfn.c  cryb-cpe.pc.in  cryb_cpe.c  cryb_cpe_clone.c  cryb_cpe_copy_attr.c  cryb_cpe_destroy.c  cryb_cpe_new.c  cryb_cpe_string.c  cryb_cpe_upgrade.c  cryb_cpe_upgrade22.c  cryb_cpe_uri.c  cryb_cpe_wfn.c
lib/digest/: Makefile.am  cryb-digest.pc.in  cryb_digest.3  cryb_digest.c  cryb_md2.3  cryb_md2.c  cryb_md4.3  cryb_md4.c  cryb_md5.3  cryb_md5.c  cryb_sha1.3  cryb_sha1.c  cryb_sha224.3  cryb_sha224.c  cryb_sha256.3  cryb_sha256.c  cryb_sha384.3  cryb_sha384.c  cryb_sha512.3  cryb_sha512.c  digest.c  md2.c  md4.c  md5.c  sha1.c  sha224.c  sha256.c  sha384.c  sha512.c
lib/enc/: Makefile.am  cryb-enc.pc.in  cryb_base32.c  cryb_base32_decode.c  cryb_base32_encode.c  cryb_base64.c  cryb_base64_decode.c  cryb_base64_encode.c  cryb_enc.c  cryb_percent.3  cryb_percent.c  cryb_percent_decode.c  cryb_percent_encode.c
lib/hash/: .gitignore  Makefile.am  cryb-hash.pc.in  cryb_adler32.3  cryb_adler32.c  cryb_fletcher.3  cryb_fletcher16.c  cryb_fletcher32.c  cryb_fletcher64.c  cryb_fnv.3  cryb_fnv.c  cryb_fnv_impl.h  cryb_hash.3  cryb_hash.c  cryb_murmur3.3  cryb_murmur3_32.c  cryb_pearson.3  fletcher16.c  fletcher32.c  fletcher64.c  murmur3_32.c  pearson.c
lib/mac/: Makefile.am  cryb-mac.pc.in  cryb_hmac_md5.c  cryb_hmac_sha1.c  cryb_hmac_sha224.c  cryb_hmac_sha256.c  cryb_hmac_sha384.c  cryb_hmac_sha512.c  cryb_mac.c  hmac.c  hmac_sha1.c  hmac_sha224.c  hmac_sha256.c  hmac_sha384.c  hmac_sha512.c
lib/mpi/: Makefile.am  README  cryb-mpi.pc.in  cryb_mpi.c  cryb_mpi_add.c  cryb_mpi_add_abs.c  cryb_mpi_cmp.c  cryb_mpi_cmp_abs.c  cryb_mpi_cmp_i32.c  cryb_mpi_cmp_i64.c  cryb_mpi_copy.c  cryb_mpi_dec.c  cryb_mpi_dec_abs.c  cryb_mpi_destroy.c  cryb_mpi_div.c  cryb_mpi_div_abs.c  cryb_mpi_eq.c  cryb_mpi_eq_abs.c  cryb_mpi_eq_i32.c  cryb_mpi_eq_i64.c  cryb_mpi_gcd_abs.c  cryb_mpi_grow.c  cryb_mpi_impl.h  cryb_mpi_inc.c  cryb_mpi_inc_abs.c  cryb_mpi_init.c  cryb_mpi_load.c  cryb_mpi_lsb.c  cryb_mpi_lshift.c  cryb_mpi_msb.c  cryb_mpi_mul.c  cryb_mpi_mul_abs.c  cryb_mpi_negate.c  cryb_mpi_rshift.c  cryb_mpi_set.c  cryb_mpi_sub.c  cryb_mpi_sub_abs.c  cryb_mpi_swap.c  cryb_mpi_zero.c  mpi.c  (+4 more)
lib/oath/: Makefile.am  cryb-oath.pc.in  cryb_oath.c  cryb_oath_hotp.c  cryb_oath_key_create.c  cryb_oath_key_destroy.c  cryb_oath_key_dummy.c  cryb_oath_key_free.c  cryb_oath_key_from_uri.c  cryb_oath_key_to_uri.c  cryb_oath_mode.c  cryb_oath_totp.c  oath_hotp.c  oath_impl.h  oath_key.c  oath_key_alloc.c  oath_key_create.c  oath_key_dummy.c  oath_key_free.c  oath_key_from_file.c  oath_key_from_uri.c  oath_totp.c
lib/rand/: Makefile.am  cryb-rand.pc.in  cryb_rand.c  cryb_rand_bytes.c
lib/rsaref/: Makefile.am  global.h  prime.c  r_dh.c  r_encode.c  r_enhanc.c  r_keygen.c  rsa.c  rsaref.h
lib/test/: Makefile.am  cryb-test.pc.in  cryb_t_compare.c  cryb_t_const.c  cryb_t_err.c  cryb_t_file.c  cryb_t_main.c  cryb_t_malloc.c  cryb_test.c  t_const.c  t_main.c  t_malloc.c  t_util.c
m4/: .gitignore  ax_pkg_config.m4  cryb_to.m4
t/: .gitignore  Makefile.am  t.h  t__string.c  t_adler.c  t_aes.c  t_assert.c  t_chacha.c  t_cipher.c  t_const.c  t_core.c  t_ctype.c  t_cxx.cc  t_des.c  t_digest.c  t_enc.c  t_endian.c  t_ffs_fls.c  t_file.c  t_fletcher.c  t_fnv.c  t_hash.c  t_hmac.c  t_hmac_md5.c  t_hmac_sha1.c  t_hmac_sha224.c  t_hmac_sha256.c  t_hmac_sha384.c  t_hmac_sha512.c  t_mac.c  t_main.c  t_malloc.c  t_md2.c  t_md4.c  t_md5.c  t_memcpy_s.c  t_memset_s.c  t_mpi.c  t_mpi.h  t_mpi_add_sub.c  (+28 more)
tools/: .gitignore  coverage.sh.in  setprops.sh
