SUBDIRS =

if CRYB_CIPHER
SUBDIRS += cipher
endif CRYB_CIPHER

if CRYB_CORE
SUBDIRS += core
endif CRYB_CORE

if CRYB_CPE
SUBDIRS += cpe
endif CRYB_CPE

if CRYB_DIGEST
SUBDIRS += digest
endif CRYB_DIGEST

if CRYB_ENC
SUBDIRS += enc
endif CRYB_ENC

if CRYB_HASH
SUBDIRS += hash
endif CRYB_HASH

if CRYB_MAC
SUBDIRS += mac
endif CRYB_MAC

if CRYB_MPI
SUBDIRS += mpi
endif CRYB_MPI

if CRYB_OATH
SUBDIRS += oath
endif CRYB_OATH

if CRYB_RAND
SUBDIRS += rand
endif CRYB_RAND

if CRYB_TEST
SUBDIRS += test
endif CRYB_TEST

if RSAREF_TESTS
SUBDIRS += rsaref
endif RSAREF_TESTS
